Fix overlay z-index

--- a/style/goban.css
+++ b/style/goban.css
@@ -88,6 +88,7 @@
         position: relative;
         width: 100%;
         height: 100%;
+        z-index: 1;
 }
 
 /**
@@ -106,6 +107,7 @@
         margin-top: -9px;
         border-radius: 8px;
         opacity: .3;
+        z-index: 2;
     }
     #goban .row li.ghost_1::after,
     #goban .row li.sign_-1.point::after { background: black; }
@@ -137,6 +139,7 @@
         line-height: 16px;
         font-size: 19px;
         font-weight: bold;
+        z-index: 2;
     }
     #goban .row li.sign_1::before {
         background: transparent;
